--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "homepage": "https://github.com/wangpengfeido/remainder-time-formatter#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.1.0",
     "eslint-loader": "^2.2.1",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "typescript": "^3.5.3"
   }
 }
